fix: always show cropper preview

--- a/component/PhotoCropper.styl
+++ b/component/PhotoCropper.styl
@@ -36,6 +36,7 @@
     .left
       display inline-block
       vertical-align top
+      margin-right 185px
     .right
       position absolute
       opacity 0
